[ux] actually fix the grid spacing problem :see_no_evil:

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -431,7 +431,7 @@ dl dd {
             flex: 1;
     padding: 15px 0;
   }
-  .grid-flex-cell:not(:first-child) {
+  [class^='grid-flex-cell']:not(:first-child) {
     margin-left: 30px;
   }
   .grid-flex-cell-1of2,
